# CA_2022_back_up_Caleb

hw/hw2/: dynamiclib.sh  libn@shanghaitech.edu.cn_homework2ringbufferinc_15_hw2.tar  ringbuffer.c  staticlib.sh
hw/hw3/: libn@shanghaitech.edu.cn_homework3longestcommonsubseries_4_main.S
hw/hw5/: libn@shanghaitech.edu.cn_homework5raytracingwithposixthreads_1_main.c
hw/hw7/: ringbuffer.ipp
lab/lab-11-starter/src/: draw.S  main.c
lab/lab-12-starter/: createIndices.py  mostPopular.py  my_data_base.txt  perWordDocumentCount.py  wordCount.py
lab/lab-12-starter/hadoop-3.2.1/etc/hadoop/: hadoop-env.sh
lab/lab-12-starter/seqFiles/: .my_data_base.txt.seq.crc  my_data_base.txt.seq
lab/lab-12-starter/spark-2.4.5-bin-hadoop2.7/conf/: spark-env.sh
lab/lab-12-starter/spark-wc-out-createIndices/: .part-00000.crc  part-00000
lab/lab-12-starter/spark-wc-out-mostPopular/: .part-00000.crc  part-00000
lab/lab10/: dotp  dotp.c
lab/lab13/: seq.txt
p1.1_dihch_libn/: Makefile  autolab.txt  translator.c
p1.1_dihch_libn/src/: compression.c  compression.h  utils.c  utils.h
p1.2_dihch_libn/: autolab.txt  translator.S
p2.1_dihch_libn/: alu.circ  autolab.txt  regfile.circ
p3_dihch_libn/: CMakeLists.txt  Makefile  autolab.txt  gbfloat_base  gbfloat_base.c  gbfloat_fast  gbfloat_fast.c  gbfloat_m128.c  gbfloat_tmp  gbfloat_tmp.c  test_accuracy  test_accuracy.c
